--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "trader-joe",
+  "name": "baguette-bridge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "x-shibx-bridge": "^0.0.4",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -16,10 +15,10 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.9.5",
     "wagmi": "^0.9.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "x-baguette-bridge": "0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "packageManager": "yarn@3.6.3",
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
